# merge-freeze

./: Dockerfile  README.md  action.yaml  lock.json  prlist.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-lock.yaml
